tests/invalid/Switch_Invalid_3.whiley
function f(int x) -> int:
    switch x:
        default:
            return 0
        default:
            return 1
